src/objects/Marketing_Project__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference key to Campaign object.</description>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Marketing Projects</relationshipLabel>
        <relationshipName>Marketing_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Banner Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Merge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Per Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebEx Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Segment__c</fullName>
        <label>Marketing Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Segmented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfOpportunit__c</fullName>
        <description>Total forecast values of all opportunities stage 3 to 7</description>
        <label>AmountAllOpportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Retention Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Programs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Marketing Project Manager.  A reference field to User object</description>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Vehicle__c</fullName>
        <label>Call To Action</label>
        <picklist>
            <picklistValues>
                <fullName>Buy Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo - Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo - On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eKit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Per-Use Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Spiff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Live In-Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Live Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweepstakes/Contest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell/Cross-sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whitepapter/Case Study</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Interest__c</fullName>
        <label>Promoted Services</label>
        <picklist>
            <picklistValues>
                <fullName>Event Assist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Assist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MeetMeNow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCNow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Assist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC - Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC - Remote Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC - Remote Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC - Service Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Assist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebOffice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Project Drop Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_End_Date__c</fullName>
        <label>Project End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Track_Id__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Track Id</label>
        <type>AutoNumber</type>
    </fields>
    <label>Marketing Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Track_Id__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_Manager_Id__c</columns>
        <columns>Communication_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Marketing Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CallToAction_Required_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Response_Vehicle__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Response_Vehicle__c</errorDisplayField>
        <errorMessage>Please select Call To Action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CommunicationType_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Communication_Type__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Communication_Type__c</errorDisplayField>
        <errorMessage>Please select a Communication Type value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MarketingCampaign_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Campaign_Id__c ) = 0</errorConditionFormula>
        <errorDisplayField>Campaign_Id__c</errorDisplayField>
        <errorMessage>Please select a Marketing Campaign.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MarketingSegment_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Marketing_Segment__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Marketing_Segment__c</errorDisplayField>
        <errorMessage>Please select a Marketing Segment value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProjectCategory_Required_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Project_Category__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Project_Category__c</errorDisplayField>
        <errorMessage>Please select a Project Category value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProjectManager_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Project_Manager_Id__c) = 0</errorConditionFormula>
        <errorDisplayField>Project_Manager_Id__c</errorDisplayField>
        <errorMessage>Please select a Project Manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PromotedServices_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Service_Interest__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Service_Interest__c</errorDisplayField>
        <errorMessage>Please select a Promoted Service value.</errorMessage>
    </validationRules>
</CustomObject>